CSS/styles.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Yeseva+One&display=swap');

::-webkit-scrollbar {
    width: 0px;
  }

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Inconsolata", serif;
}

body {
    color: white;
    background: black;
    min-height: 100vh; 
    display: flex;
    flex-direction: column;
}

canvas {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

.container {
    position: relative;
    z-index: 2;
    padding: 50px 20px;
    padding-bottom: 50px;
}

.main-info {
    height: 100vh;
    box-sizing: border-box;
    padding: 0 1.5em;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.head-and-info {
    max-width: 50em;
    width: 100%;
    margin: 0 auto;
}

header h1 {
    font-size: 6rem;
    display: flex;
    font-family: 'Yeseva One', serif;
    font-weight: 400;
}

.first-name {
    color: transparent;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: white;
}

.subheading {
    font-size: 1.2rem;
    font-family: "Inconsolata", serif;
    font-weight: 300;
    line-height: 2.5rem;
}

.subheading-a {
    border: .1rem solid white;
    border-radius: .75rem;
    padding: .4rem;
    transition-duration: .25s;
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;
    color: white;
    background-color: transparent;
}

.subheading-link {
    text-decoration: underline;
    color: white;
}


.socials {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    position: fixed;
    top: 5em;
    right: 5em;
    z-index: 1;
}


.social-img {
    color: white;
    width: 50px;
    margin-bottom: 10px;
    transition: transform 0.3s ease, opacity 0.3s ease;
}

.social-img:hover {
    transform: scale(1.1); 
}

.projects {
    margin-top: 5em;
    padding: 2em 1.5em; 
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start; 
    position: relative;
    min-height: 80vh; 
}

.projects-container {
    flex-direction: column;
    align-items: flex-start;
    display: flex;
    gap: 4em;
    max-width: 50em;
    width: 100%;
    margin: 0 auto;
}

.projects-container h2 {
    font-family: 'Yeseva One', serif;
    font-size: 2rem;
    color: #c6c8d1;
}

.project-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
    gap: 4em;
}

.projects-arrow {
    fill: white;
    transition: transform .3s ease;
    height: 1em;
    width: auto;
}

.projects-arrow:hover {
    transform: translate(5px, -5px);
}

.projects h3 {
    font-family: 'Yeseva One';
    font-size: 1.5rem;
    color: #c6c8d1;
    font-weight: 300;
}

.projects-link {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: 5px;
    text-decoration: none;
    color: inherit;
}

.projects-link:hover {
    color: white;
}

.tags {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
}

.tag {
    background-color: #b6e3fc3b;
    color: #b6e4fc;
    padding: 5px 10px;
    border-radius: 15px;
    font-family: 'Inconsolata', monospace;
    font-weight: 700;
    font-size: .9em;
    -webkit-backdrop-filter: blur(100px);
    backdrop-filter: blur(100px);
}

.project-info {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
}

.project-info p {
    color: #c6c8d1;
    font-family: 'Inconsolata', serif;
    font-size: 1.5rem;
}

.img-container {
    width: 50%;
}

.portfolio-img {
    width: 100%;
    height: auto;
    border-radius: 10px;
    box-shadow: 4px 4px 4px #0003;
    transition: box-shadow .3s ease;
}

.project1 {
    width: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    gap: 20px;
    opacity: .8;
    transition: opacity .3s ease;
    margin: 1em 0;
}

.project2 {
    width: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    gap: 20px;
    opacity: .8;
    transition: opacity .3s ease;
    margin: 1em 0;
}

.null-img-container {
    border-radius: 10px;
    border: 1px solid #c6c8d1;
    background: repeating-linear-gradient(-45deg, transparent, transparent 10px, #c6c8d1 10px, #c6c8d1 11px);
    padding-bottom: 56.25%;
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    filter: none;
}

.page-footer {
    position: relative; 
    padding: 2em 1em; 
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    text-align: center;
    margin-top: 2em; 
}

.first-line {
    padding: 1em 1em 0;
    font-size: 1.5rem;
    font-family: 'Inconsolata', serif;
    color: #c6c8d1;
}

.emoji {
    font-family: apple color emoji, segoe ui emoji, noto color emoji, android emoji, emojisymbols, emojione mozilla, twemoji mozilla, segoe ui symbol;
    display: inline-block;
    transition: transform .2s ease-in-out;
}

.emoji:hover {
    animation: wave 1.5s infinite;
}

@keyframes wave {
    0% {
        transform: rotate(0);
    }
    20% {
        transform: rotate(-19deg);
    }
    40% {
        transform: rotate(20deg);
    }
    60% {
        transform: rotate(-10deg);
    }
    80% {
        transform: rotate(0);
    }100% {
        transform: rotate(0);
    }
}

.page-rights {
    font-family: 'Inconsolata', monospace;
    color: #c6c8d1;
    font-size: 1.5rem;
}

@media (max-width: 1150px) {
    .socials {
        color: white;
        position: static;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        margin-top: 2em;
        gap: 20px;
    }

    .project1, .project2 {
        flex-direction: column; 
        align-items: center; 
    }

    .img-container {
        width: 100%; 
    }

    .portfolio-img {
        width: 100%; 
        height: auto;
    }

    .project-info {
        text-align: center; 
    }

    .tags {
        justify-content: center; 
    }
}


.number-36 {
    color: orange;
    font-weight: bold;
  }

  
  .floating-number {
  position: absolute;
  font-size: 24px;
  color: orange;
  font-weight: bold;
  opacity: 1;
  animation: floatUp 1.5s ease-out forwards;
}

@keyframes floatUp {
  0% {
    transform: translateY(0);
    opacity: 1;
  }
  100% {
    transform: translateY(-50px);
    opacity: 0;
  }
}

